[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epmc-serial"
version = "1.1.1"
description = "Python serial interface for the Easy PID Motor Controller (EPMC)"
authors = [
  { name="Samuel Obiagba", email="samuel.c.agba@gmail.com" },
]
dependencies = ["pyserial"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]